fixed X overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ nav{
     position: absolute;
     top:1em;
     z-index: 3;
+    overflow-x: hidden;
 }
 .nav-pages{
     float:left;
@@ -96,6 +97,7 @@ nav{
 /*Portfolio Page*/
 #portfolio{
     width:100%;
+    overflow-x: hidden;
     text-align: center;
 }
 .portfolio-images-wrapper{
@@ -130,6 +132,7 @@ nav{
     position: relative;
     border-top: 3px solid var(--charcoal);
     border-bottom: 3px solid var(--charcoal);
+    overflow-x: hidden;
 }
 .about-headshot{
     width: 32vmax;
@@ -153,6 +156,7 @@ nav{
     width:100%;
     text-align: right;
     position: relative;
+    overflow-x: hidden;
 }
 .contacts-wrapper{display: inline-table;list-style: none;margin: 0;padding: 0;position: relative;margin: 3vmax 4vmax;}
 .contact-title{
